--- a/index.html
+++ b/index.html
@@ -3,38 +3,195 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-            background-color: #f0f0f0;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            font-size: 18px;
-            color: #666;
-        }
-        .btn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 15px 32px;
-            font-size: 16px;
-            border: none;
-            cursor: pointer;
-            text-decoration: none;
-        }
-        .btn:hover {
-            background-color: #45a049;
-        }
-    </style>
+    <title>Sanithu Nimadith Jayakody | CV</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
-    <h1>Welcome to My GitHub Pages Site!</h1>
-    <p>This is a simple test page to confirm that your GitHub Pages setup is working.</p>
-    <a href="https://github.com" class="btn">Go to GitHub</a>
+    <div class="container">
+        <header>
+            <div class="profile-container">
+                <div class="profile-info">
+                    <h1>Sanithu Nimadith Jayakody</h1>
+                    <h2>Computer Science Student</h2>
+                    <div class="download-btn">
+                        <a href="./CV.pdf" download="Sanithu-Nimadith-Jayakody-CV.pdf">
+                            <i data-feather="download"></i> Download CV
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <main>
+            <section class="about">
+                <h3><i data-feather="user"></i> Profile</h3>
+                <p>
+                    An expert web developer with a passion for creating dynamic and user-friendly websites, I am specialized in crafting seamless digital experiences. My expertise spans a wide range of technologies, enabling me to develop innovative solutions. With a strong foundation in problem-solving, excellent communication skills, and a keen eye for design, I am committed to delivering high-quality projects that exceed expectations. My creativity, combined with my technical knowledge, allows me to bring unique and effective ideas to life on the web.
+                </p>
+            </section>
+
+            <div class="two-column">
+                <section class="education">
+                    <h3><i data-feather="book"></i> Education</h3>
+                    <div class="timeline">
+                        <div class="timeline-item">
+                            <div class="timeline-date">2024 - Present</div>
+                            <div class="timeline-content">
+                                <h4>BSC Computer Science Degree (4 Year)</h4>
+                                <p>Informatics Institute of Technology | IIT Campus</p>
+                                <ul>
+                                    <li>1st Year Completed</li>
+                                    <li>2nd Year Ongoing</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="timeline-item">
+                            <div class="timeline-date">2023 - 2023</div>
+                            <div class="timeline-content">
+                                <h4>Foundation Certificate</h4>
+                                <p>Informatics Institute of Technology | IIT Campus</p>
+                            </div>
+                        </div>
+                        <div class="timeline-item">
+                            <div class="timeline-date">2023 - 2023</div>
+                            <div class="timeline-content">
+                                <h4>Java Application Development Using JavaSE (8 Week Training Course)</h4>
+                                <p>University Of Colombo School Of Computing (UCSC)</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="skills">
+                    <h3><i data-feather="award"></i> Skills</h3>
+                    <ul class="skills-list">
+                        <li>Team Work</li>
+                        <li>Innovation Skills</li>
+                        <li>Excellent Knowledge</li>
+                        <li>Project Management and Documentation</li>
+                    </ul>
+
+                    <h4>Frameworks</h4>
+                    <ul class="skills-list">
+                        <li>Express</li>
+                        <li>Next.js</li>
+                        <li>Angular.js</li>
+                        <li>Spring Boot</li>
+                    </ul>
+
+                    <h4>Databases</h4>
+                    <ul class="skills-list">
+                        <li>MongoDB</li>
+                        <li>MySQL</li>
+                    </ul>
+
+                    <h4>UI/UX Design</h4>
+                    <ul class="skills-list">
+                        <li>Figma</li>
+                    </ul>
+
+                    <h4>Technical Skills</h4>
+                    <ul class="skills-list">
+                        <li>Google Docs, Sheets, Forum</li>
+                        <li>Microsoft Word, PowerPoint, Excel</li>
+                    </ul>
+
+                    <h4>Project Management</h4>
+                    <ul class="skills-list">
+                        <li>Git</li>
+                        <li>NPM</li>
+                        <li>Stack</li>
+                    </ul>
+
+                    <h4>Languages</h4>
+                    <ul class="skills-list">
+                        <li>English (Intermediate)</li>
+                        <li>Sinhala (Fluent)</li>
+                    </ul>
+                </section>
+            </div>
+
+            <section class="projects">
+                <h3><i data-feather="code"></i> Projects</h3>
+                <div class="projects-grid">
+                    <div class="project-card">
+                        <h4>Real time ticketing system</h4>
+                        <p class="project-date">2024</p>
+                        <p>A real time ticketing system design with Spring boot as the backend and Angular.js as the front end</p>
+                    </div>
+                    <div class="project-card">
+                        <h4>SDGP Group Project</h4>
+                        <p class="project-date">2024 - 2025</p>
+                        <p>Second year group project</p>
+                    </div>
+                    <div class="project-card">
+                        <h4>Finess Smart</h4>
+                        <p class="project-date">2023</p>
+                        <p>A UI/UX design for foundation second semester group project</p>
+                    </div>
+                    <div class="project-card">
+                        <h4>Web design</h4>
+                        <p class="project-date">2023</p>
+                        <p>A simple product landing page for 1st year second semester group project</p>
+                    </div>
+                    <div class="project-card">
+                        <h4>Express server framework</h4>
+                        <p class="project-date">2023</p>
+                        <p>A simple express server framework design with JavaScript</p>
+                    </div>
+                    <div class="project-card">
+                        <h4>Account system</h4>
+                        <p class="project-date">2023</p>
+                        <p>A simple login and signup system design with JavaScript and Node.js</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="competitions">
+                <h3><i data-feather="award"></i> Competition Participation</h3>
+                <div class="timeline">
+                    <div class="timeline-item">
+                        <div class="timeline-date">2023</div>
+                        <div class="timeline-content">
+                            <h4>Cutting Edge</h4>
+                            <p>Informatics Institute of Technology | IIT Campus</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-date">2022</div>
+                        <div class="timeline-content">
+                            <h4>IESL JIY</h4>
+                            <p>Institution of Engineers Sri Lanka</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="contact">
+                <h3><i data-feather="phone"></i> Contact</h3>
+                <div class="contact-info">
+                    <p><i data-feather="mail"></i> <a href="mailto:sanithujayafiverr@gmail.com">sanithujayafiverr@gmail.com</a></p>
+                    <p><i data-feather="phone"></i> <a href="tel:+94722616461">072 261 6461</a></p>
+                </div>
+            </section>
+
+            <section class="social">
+                <h3><i data-feather="link"></i> Social</h3>
+                <div class="social-links">
+                    <a href="https://github.com/0-kodiya-0" target="_blank"><i data-feather="github"></i> GitHub</a>
+                    <a href="https://www.linkedin.com/in/sanithu-jayakody-a541142ab" target="_blank"><i data-feather="linkedin"></i> LinkedIn</a>
+                    <a href="https://stackoverflow.com/users/20159737" target="_blank"><i data-feather="layers"></i> Stack Overflow</a>
+                </div>
+            </section>
+        </main>
+    </div>
+
+    <script>
+        feather.replace();
+    </script>
 </body>
 </html>
